Chore: content updates

--- a/content/globals/settings.yaml
+++ b/content/globals/settings.yaml
@@ -1,7 +1,6 @@
-id: 9242876a-41c4-42f8-96f8-ac92d6025406
 title: Settings
 data:
-  site_name: 'Cool Writings'
+  site_name: 'A Digital Home'
   social:
     -
       name: Twitter
