--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/site.js": "/js/site.js",
-    "/css/tailwind.css": "/css/tailwind.css"
+    "/js/site.js": "/js/site.js?id=b1209ee077a2a35c987091be58e4b154",
+    "/css/tailwind.css": "/css/tailwind.css?id=28c4906c6abb4b72be569ae8860d2c4d"
 }
