--- a/resources/blueprints/collections/notes/note.yaml
+++ b/resources/blueprints/collections/notes/note.yaml
@@ -1,4 +1,4 @@
-title: Article
+title: Note
 sections:
   main:
     display: Main
@@ -15,7 +15,7 @@ sections:
           display: Content
           restrict: false
           automatic_line_breaks: true
-          automatic_links: false
+          automatic_links: true
           escape_markup: false
           smartypants: false
       -
