--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -7,3 +7,7 @@ tree:
     entry: b9e4bfe3-9c12-4553-b7ef-f43c22ffaa63
   -
     entry: f5a53468-017e-4725-b5b6-a745df7e94cb
+  -
+    entry: e22a4dc6-5551-4b10-84bf-488903ee20f2
+  -
+    entry: 1d412bb5-be65-40de-8011-71e1061d85f1
