--- a/resources/blueprints/collections/bookmarks/bookmarks.yaml
+++ b/resources/blueprints/collections/bookmarks/bookmarks.yaml
@@ -10,11 +10,9 @@ sections:
           validate:
             - required
       -
-        handle: url
+        handle: bookmark_url
         field:
-          collections:
-            - bookmarks
-          display: URL
+          display: 'Bookmark URL'
           type: link
           icon: link
           listable: hidden
@@ -23,10 +21,37 @@ sections:
           validate:
             - required
       -
-        handle: content
+        handle: bookmark_note
         field:
-          type: markdown
-          localizable: true
+          always_show_set_button: false
+          buttons:
+            - h2
+            - bold
+            - italic
+            - unorderedlist
+            - orderedlist
+            - removeformat
+            - quote
+            - anchor
+            - image
+            - table
+          save_html: false
+          toolbar_mode: fixed
+          link_noopener: false
+          link_noreferrer: false
+          target_blank: false
+          reading_time: false
+          fullscreen: true
+          allow_source: true
+          enable_input_rules: true
+          enable_paste_rules: true
+          antlers: false
+          display: 'Bookmark Note'
+          type: bard
+          icon: bard
+          listable: hidden
+          instructions_position: above
+          read_only: false
   sidebar:
     display: Sidebar
     fields:
